force-app/main/default/objects/Dependency__c/Dependency__c.object-meta.xml
<CustomObject>
    <label>Dependency</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>