force-app/main/default/objects/Dependency__c/fields/Dep_Type__c.field-meta.xml
<CustomField>
    <fullName>Dep_Type__c</fullName>
    <label>Dep Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>