force-app/main/default/objects/Dependency__c/fields/Dependent_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Type__c</fullName>
    <label>Dependent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Predecessors</fullName>
            </value>
            <value>
                <fullName>Successors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>