force-app/main/default/objects/Dependency__c/fields/Preceeding_SOE__c.field-meta.xml
<CustomField>
    <fullName>Preceeding_SOE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceeding SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Dependencies (Prec/Succ STP)</relationshipLabel>
    <relationshipName>Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>