force-app/main/default/objects/Dependency__c/fields/Preceeding_Task__c.field-meta.xml
<CustomField>
    <fullName>Preceeding_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceeding Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Dependencies (Pred/Suc Task)</relationshipLabel>
    <relationshipName>Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>