force-app/main/default/objects/Dependency__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>