force-app/main/default/objects/Dependency__c/validationRules/Preceeding_Task_is_not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Preceeding_Task_is_not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL( Preceeding_Task__c ), ISBLANK(Preceeding_Task__c ) )</errorConditionFormula>
    <errorMessage>Preceeding Task cannot be empty.</errorMessage>
</ValidationRule>